--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "mongoose": "^8.16.1",
     "next": "15.3.4",
     "next-intl": "^4.3.1",
+    "rc-slider": "^11.1.8",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
+    "react-range": "^1.10.0",
     "swiper": "^11.2.10"
   },
   "devDependencies": {
