--- a/package.json
+++ b/package.json
@@ -9,27 +9,34 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.2.4",
+    "bcrypt": "^6.0.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "framer-motion": "^12.20.2",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.525.0",
     "mongoose": "^8.16.1",
     "next": "15.3.4",
+    "next-auth": "^4.24.11",
     "next-intl": "^4.3.1",
     "rc-slider": "^11.1.8",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.5.0",
     "react-leaflet": "^5.0.0",
     "react-range": "^1.10.0",
-    "swiper": "^11.2.10"
+    "swiper": "^11.2.10",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
+    "@types/bcrypt": "^5.0.2",
     "@types/leaflet": "^1.9.19",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.3.5",
     "typescript": "^5"
   }
 }
