--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next": "15.3.4",
     "next-auth": "^4.24.11",
     "next-intl": "^4.3.1",
+    "nodemailer": "^6.10.1",
     "rc-slider": "^11.1.8",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
